타입가드, 추론, 제네릭

--- a/workspace/tsconfig.json
+++ b/workspace/tsconfig.json
@@ -109,7 +109,7 @@
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
-  }
-  // "include": ["workspace/**/*"],
-  // "exclude": ["node_modules", "sample/**/*"]
+  },
+
+  "exclude": ["**/tempCodeRunnerFile.ts"] // code runner가 만든 임시 파일은 컴파일 제외
 }
