🔧 refactoring의 js 파일 제외

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 .vscode
 .history
+.github
 PPT/~$*
 tempCodeRunnerFile.*
 workspace-ins/ch06/*.js
 workspace-ins/ch07/*.js
-.github
+# workspace-ins/ts-refactoring/**/*
+workspace-ins/ts-refactoring/**/*.js
