🧪 js 파일 ts로 일괄 변환

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ workspace-ins/ch06/*.js
 workspace-ins/ch07/*.js
 # workspace-ins/ts-refactoring/**/*
 workspace-ins/ts-refactoring/**/*.js
+!workspace-ins/ts-refactoring/convert-js-to-ts.js
