--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,11 @@
 .github
 PPT/~$*
 tempCodeRunnerFile.*
+workspace-ins/ch05/ajax/*.js
+workspace-ins/ch05/bom/*.js
 workspace-ins/ch06/*.js
 workspace-ins/ch07/*.js
+workspace-ins/ch08/*.js
 # workspace-ins/ts-refactoring/**/*
 workspace-ins/ts-refactoring/**/*.js
 !workspace-ins/ts-refactoring/convert-js-to-ts.js
