--- a/workspace-ins/package.json
+++ b/workspace-ins/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "@types/axios": "^0.9.36"
+    "@types/axios": "^0.9.36",
+    "@types/socket.io-client": "^1.4.36"
   }
 }
