--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ node_modules
 tempCodeRunnerFile.*
 workspace-ins/ch05/ajax/**/*.js
 workspace-ins/ch05/bom/**/*.js
+workspace-ins/ch05/chat/**/*.js
 workspace-ins/ch06/**/*.js
 workspace-ins/ch07/**/*.js
 workspace-ins/ch08/**/*.js
